Fix date storage
- Fix ordering of tasks.
- Fix extra padding

--- a/client/AppStyles.css
+++ b/client/AppStyles.css
@@ -1,8 +1,3 @@
 .mainContent {
   margin-top: 75px;
 }
-
-.app {
-  margin: 0;
-  top: 0;
-}
